# ai-trading-blueprint

./: .dockerignore  .gitignore  ARCHITECTURE.md  BLUEPRINT-UI-MIGRATION.md  CLAUDE.md  Cargo.toml  Dockerfile  EVALS.md  FRONTEND.md  HANDOFF-AUDIT-FIXES.md  IMPROVEMENTS.md  MEMORY.md  OPERATORS.md  PRODUCT_BRIEF.md  README.md  RESEARCH.md  SCRATCHPAD.md  SDK_IMPROVEMENTS.md  SDK_PROPOSALS.md  SPEC.md  STRATEGY-RECIPE-ROADMAP.md  UPGRADE-CD-LOOP.md  audit.toml  blueprint-definition.json  deny.toml  flake.nix  foundry.toml  harness.toml  package-lock.json  package.json  remappings.txt  settings.env  settings.env.example  slither.config.json
patches/libp2p/: Cargo.toml
patches/libp2p/src/: lib.rs
trading-blueprint-bin/: Cargo.toml  webhooks.toml
trading-blueprint-bin/src/: lib.rs  main.rs  operator_api.rs  preflight_limiter.rs  workflow_compat.rs
trading-blueprint-bin/tests/: operator_api_tests.rs
trading-blueprint-lib/: Cargo.toml
trading-blueprint-lib/examples/: activate_live_once.rs  dump_profile.rs  encode_provision.rs  provision_live_once.rs  test_decode.rs
trading-blueprint-lib/src/: asset_preflight.rs  context.rs  discovery.rs  fees.rs  graceful_consumer.rs  harness.rs  lib.rs  on_chain.rs  operator_chat.rs  operator_credentials.rs  polymarket_ws.rs  registration.rs  request_access.rs  session_auth.rs  state.rs  tangle_compat.rs  telemetry.rs  wind_down.rs  workflow_compat.rs
trading-blueprint-lib/src/jobs/: activate.rs  configure.rs  deprovision.rs  exec.rs  extend.rs  mod.rs  observatory_cadence.rs  promotion_conductor.rs  prompt.rs  provision.rs  self_improvement_cadence.rs  settlement_cadence.rs  start.rs  status.rs  stop.rs  task.rs  tick_artifacts.rs  webhook_event.rs  workflow_tick.rs
trading-blueprint-lib/src/prompts/: mod.rs  packs.rs
trading-blueprint-lib/src/providers/: aave.rs  coingecko.rs  gmx.rs  hyperliquid.rs  mod.rs  morpho.rs  polymarket.rs  uniswap.rs  vertex.rs
trading-blueprint-lib/src/state/: learning_store.rs  mod.rs
trading-blueprint-lib/tests/: activate_factory_resolution.rs  decision_provenance.rs  fork_e2e.rs  integration.rs  loop_hygiene.rs  otlp_export.rs  tangle_binary_e2e.rs  tangle_e2e.rs  tangle_e2e_full.rs  tangle_full_pipeline.rs
trading-blueprint-lib/tests/common/: contract_deployer.rs  e2e_helpers.rs  fixtures.rs  mod.rs  validators.rs
trading-http-api/: Cargo.toml
trading-http-api/examples/: eval_server.rs
trading-http-api/src/: alerts.rs  amounts.rs  auth.rs  candle_store.rs  chart_study_store.rs  envelope_renewal.rs  envelope_watcher.rs  evolution_store.rs  hyperliquid_intent.rs  hyperliquid_mode.rs  hyperliquid_nav.rs  hyperliquid_settlement.rs  learning_store.rs  lib.rs  live_portfolio.rs  metrics_store.rs  nav_stream.rs  paper_settlement.rs  rate_limit.rs  risk_budget.rs  sandbox_store.rs  secret.rs  session_auth.rs  trade_store.rs  trial_marker.rs
trading-http-api/src/routes/: adapters.rs  backtest.rs  candles.rs  cex.rs  chart_studies.rs  circuit.rs  clob.rs  collateral.rs  envelope.rs  envelope_quote.rs  evolution.rs  execute.rs  health.rs  hyperliquid.rs  hyperliquid_funding.rs  hyperliquid_mode.rs  hyperliquid_nav.rs  hyperliquid_settlement.rs  learning.rs  market_data.rs  metrics.rs  mod.rs  nav_ws.rs  portfolio.rs  preflight.rs  prometheus.rs  session.rs  solana.rs  strategy.rs  supported_assets.rs  trades.rs  uniswap.rs  validate.rs
trading-http-api/tests/: api_tests.rs  nav_ws_integration.rs
trading-instance-blueprint-bin/: Cargo.toml
trading-instance-blueprint-bin/src/: main.rs
trading-instance-blueprint-lib/: Cargo.toml
trading-instance-blueprint-lib/src/: lib.rs  operator_api.rs
trading-instance-blueprint-lib/src/jobs/: configure.rs  exec.rs  mod.rs  prompt.rs  provision.rs  start.rs  status.rs  stop.rs  task.rs
trading-instance-blueprint-lib/tests/: integration.rs  operator_api_tests.rs  tangle_e2e.rs
trading-instance-blueprint-lib/tests/common/: fixtures.rs  mod.rs
trading-runtime/: Cargo.toml
trading-runtime/examples/: agent_persona_eval.rs  evolution_agent.rs  fleet_manager.rs  harness_backtest.rs  polymarket_agent_candidate_eval.rs  polymarket_real_price_eval.rs  prediction_harness_benchmark.rs  walk_forward_backtest.rs
trading-runtime/src/: aave_v3_registry.rs  calldata_decoder.rs  chain.rs  contracts.rs  error.rs  execution_hash.rs  executor.rs  fees.rs  hyperevm_corewriter.rs  hyperliquid.rs  intent.rs  leaderboard.rs  lib.rs  market_data.rs  multicall.rs  polymarket_clob.rs  portfolio.rs  protocol_fees.rs  signature_verify.rs  signed_envelope.rs  strategy.rs  supported_assets.rs  token_metadata.rs  trading_envelope.rs  types.rs  uniswap_envelope.rs  url_validation.rs  validator_client.rs  vault_client.rs
trading-runtime/src/adapters/: aave_v3.rs  aerodrome.rs  gmx_v2.rs  hyperliquid.rs  mod.rs  morpho.rs  polymarket.rs  stat_arb.rs  twap.rs  uniswap_v3.rs  vertex.rs
trading-runtime/src/analytics/: bootstrap.rs  mod.rs  monte_carlo.rs  regime.rs  walk_forward.rs
trading-runtime/src/backtest/: baseline.rs  cost_model.rs  engine.rs  history.rs  indicators.rs  mod.rs  prediction.rs  runner.rs  types.rs
trading-runtime/src/candle_sources/: coinbase.rs  drift.rs  geckoterminal.rs  hyperliquid.rs  mod.rs  polymarket.rs
trading-runtime/src/cex/: binance.rs  coinbase.rs  keys.rs  mod.rs
trading-runtime/src/envelope/: abi_bridge.rs  check.rs  enforcement.rs  error.rs  mod.rs  policy.rs  (+2 more)
trading-runtime/tests/: ai_simulation.rs  ai_trading_flow.rs  anvil_integration.rs  backtest_runner_equivalence.rs  hyperevm_corewriter_golden.rs  hyperliquid_e2e.rs  multisig_test.rs  new_signals_integration.rs  preflight_anvil.rs
trading-tee-instance-blueprint-bin/: Cargo.toml
trading-tee-instance-blueprint-bin/src/: main.rs
trading-tee-instance-blueprint-lib/: Cargo.toml
trading-tee-instance-blueprint-lib/src/: lib.rs
trading-validator-bin/: Cargo.toml
trading-validator-bin/src/: main.rs
trading-validator-lib/: Cargo.toml
trading-validator-lib/src/: context.rs  lib.rs  registration.rs  risk_evaluator.rs  scoring.rs  server.rs  signer.rs  slashing.rs
(+835 files in other folders)
