[workspace]
resolver = "3"
members = [
    "trading-runtime",
    "trading-http-api",
    "trading-blueprint-lib",
    "trading-blueprint-bin",
    "trading-validator-lib",
    "trading-validator-bin",
    "trading-instance-blueprint-lib",
    "trading-instance-blueprint-bin",
    "trading-tee-instance-blueprint-lib",
    "trading-tee-instance-blueprint-bin",
]

[workspace.package]
authors = ["Drew Stone"]
edition = "2024"
description = "AI Trading Blueprints for Tangle Network"
license = "MIT OR Apache-2.0"
