[package]
name = "trading-http-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "HTTP API server for trading sidecar agents"
license.workspace = true

[dependencies]
trading-runtime = { path = "../trading-runtime" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt", "net", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
