[package]
name = "trading-http-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "HTTP API server for trading sidecar agents"
license.workspace = true

[dependencies]
trading-runtime = { path = "../trading-runtime" }
sandbox-runtime = { git = "https://github.com/tangle-network/ai-agent-sandbox-blueprint.git", branch = "main" }
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["rt", "net", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
alloy = { version = "1", default-features = false, features = ["signers"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
solana-sdk = "2"
dashmap = "6"
rand = "0.8"
hex = "0.4"
futures-util = "0.3"
bytes = "1"
prometheus = "0.13"

[features]
default = []
# Exposes test-only hooks (e.g. `learning_store::set_test_dir`) so sibling
# crates can re-use this crate's stores in their own integration tests.
test-utils = []

[dev-dependencies]
trading-validator-lib = { path = "../trading-validator-lib" }
http-body-util = "0.1"
hyper = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
