[package]
name = "trading-instance-blueprint-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Binary runner for the AI trading instance blueprint (single dedicated bot)"
license.workspace = true

[[bin]]
name = "trading-instance-blueprint"
path = "src/main.rs"

[dependencies]
trading-instance-blueprint-lib = { path = "../trading-instance-blueprint-lib" }
trading-blueprint-lib = { path = "../trading-blueprint-lib" }
trading-http-api = { path = "../trading-http-api" }
trading-runtime = { path = "../trading-runtime" }
ai-agent-sandbox-blueprint-lib = { git = "https://github.com/tangle-network/ai-agent-sandbox-blueprint.git", branch = "main" }
sandbox-runtime = { git = "https://github.com/tangle-network/ai-agent-sandbox-blueprint.git", branch = "main" }
blueprint-producers-extra = { version = "=0.2.0-alpha.5", features = ["cron"] }
blueprint-sdk = { version = "=0.2.0-alpha.9", default-features = false, features = ["std", "tangle"] }
axum = "0.8"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
