[package]
name = "trading-instance-blueprint-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "AI Trading Instance Blueprint — single dedicated bot per service instance"
license.workspace = true

[dependencies]
trading-blueprint-lib = { path = "../trading-blueprint-lib" }
sandbox-runtime = { path = "../../ai-agent-sandbox-blueprint/sandbox-runtime" }
ai-agent-sandbox-blueprint-lib = { path = "../../ai-agent-sandbox-blueprint/ai-agent-sandbox-blueprint-lib" }
axum = "0.8"
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "macros", "tangle", "local-store"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync", "rt", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
sandbox-runtime = { path = "../../ai-agent-sandbox-blueprint/sandbox-runtime", features = ["test-utils"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
