[package]
name = "trading-tee-instance-blueprint-bin"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Binary runner for the AI trading TEE instance blueprint (TEE-secured single bot)"
license.workspace = true

[[bin]]
name = "trading-tee-instance-blueprint"
path = "src/main.rs"

[dependencies]
trading-tee-instance-blueprint-lib = { path = "../trading-tee-instance-blueprint-lib" }
trading-instance-blueprint-lib = { path = "../trading-instance-blueprint-lib" }
trading-blueprint-lib = { path = "../trading-blueprint-lib" }
ai-agent-sandbox-blueprint-lib = { path = "../../ai-agent-sandbox-blueprint/ai-agent-sandbox-blueprint-lib" }
sandbox-runtime = { path = "../../ai-agent-sandbox-blueprint/sandbox-runtime", features = ["tee-all"] }
blueprint-producers-extra = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", features = ["cron"] }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tangle"] }
axum = "0.8"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
