[package]
name = "trading-validator-lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Trading Validator Blueprint — independent risk validation committee"
license.workspace = true

[dependencies]
trading-runtime = { path = "../trading-runtime" }
blueprint-sdk = { git = "https://github.com/tangle-network/blueprint.git", branch = "main", default-features = false, features = ["std", "tracing", "macros", "tangle", "local-store"] }
alloy = { version = "1", features = ["signers", "signer-local", "sol-types"] }
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["sync", "rt"] }
tower = "0.5"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
