[package]
name = "libp2p"
version = "0.54.1"
edition = "2021"
publish = false

[dependencies]
libp2p-upstream = { package = "libp2p", version = "0.56.0", default-features = false }

[features]
autonat = ["libp2p-upstream/autonat"]
cbor = ["libp2p-upstream/cbor"]
dcutr = ["libp2p-upstream/dcutr"]
dns = ["libp2p-upstream/dns"]
gossipsub = ["libp2p-upstream/gossipsub"]
identify = ["libp2p-upstream/identify"]
kad = ["libp2p-upstream/kad"]
macros = ["libp2p-upstream/macros"]
mdns = ["libp2p-upstream/mdns"]
noise = ["libp2p-upstream/noise"]
ping = ["libp2p-upstream/ping"]
quic = ["libp2p-upstream/quic"]
relay = ["libp2p-upstream/relay"]
request-response = ["libp2p-upstream/request-response"]
serde = ["libp2p-upstream/serde"]
tcp = ["libp2p-upstream/tcp"]
tokio = ["libp2p-upstream/tokio"]
upnp = ["libp2p-upstream/upnp"]
yamux = ["libp2p-upstream/yamux"]
